Updated Git,linkedIn,Resume page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/11c3020d0a.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -17,10 +18,13 @@
             <a class="navbar-brand" href="#">Niv Swamy</a>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">About</a>
+                    <a class="nav-link" href="index.html">About Me</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="portfolio.html">Portfolio </a>
+                    <a class="nav-link" href="projects.html">Projects </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="resume.html">Resume</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
@@ -39,28 +43,13 @@
                         </h3>
                         <hr>
                         <div class="clearfix">
-                            <img src="./images/Niv.JPG" alt="" class="float-left">
+                            <img src="./images/circle-cropped.png" alt="" class="float-left square">
                             <p>
-                                "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo 
-                                inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni 
-                                dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi 
-                                tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea 
-                                commodi consequatur? 
-                                Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
-                            </p>
-                            <p>
-                                "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo 
-                                inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni 
-                                dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi 
-                                tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea 
-                                commodi consequatur? 
-                                Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
-                            </p>
-                            <p>
-                                "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo 
-                                inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni 
-                                dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi 
-                                tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+                               Welcome to My Page! <br>
+                               
+                               Nivetha Packiriswamy(Niv) originially from Southern part of, India. Azure Cloud Computing Engineer with Mindtree Bellvue.
+                               Started my bootcamp with UW in the month of in the month of March as full stack web developer. Motto Never Stop Evolving.
+                
                             </p>
                         </div>
                     </div>
@@ -71,8 +60,9 @@
     </div>
     </div>
     <footer class="footer">
-        © 2020 Copyright:
-    </div>
+       <a href="https://github.com/Nivolving"><i class="fab fa-github fa-2x"></i></a>
+       <a href="https://www.linkedin.com/in/nivethap/"><i class="fab fa-linkedin fa-2x"></i></a>
+       <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
     </footer>
 </body>
 </html>
