--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="css/contact.css">
+    <script src="https://kit.fontawesome.com/11c3020d0a.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -16,12 +17,17 @@
             <a class="navbar-brand" href="#">Niv Swamy</a>            
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">About</a>
+                    <a class="nav-link" href="index.html">About Me</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="portfolio.html">Portfolio </a>
+                    <a class="nav-link" href="projects.html">Projects </a>
+                </li>
+                <li class="nav-item">
+                        <a class="nav-link" href="resume.html">Resume</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
+                </li>
                 </ul>
         </div>
     </nav>
@@ -70,11 +76,9 @@
     </body>
     <footer class="footer">
 
-        <!-- Copyright -->
-        © 2020 Copyright:
-
-        </div>
-        <!-- Copyright -->
+        <a href="https://github.com/Nivolving"><i class="fab fa-github fa-2x"></i></a>
+        <a href="https://www.linkedin.com/in/nivethap/"><i class="fab fa-linkedin fa-2x"></i></a>
+        <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
 
     </footer>
 </body>
