--- a/projects.html
+++ b/projects.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="css/portfolio.css">
+  <script src="https://kit.fontawesome.com/11c3020d0a.js" crossorigin="anonymous"></script>
 </head>
 <!--My Body content starts here-->
 
@@ -18,10 +19,13 @@
             <a class="navbar-brand" href="#">Niv Swamy</a>            
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">About</a>
+                    <a class="nav-link" href="index.html">About Me</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="portfolio.html">Portfolio </a>
+                    <a class="nav-link" href="projects.html">Projects </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="resume.html">Resume</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
@@ -44,18 +48,18 @@
 
             <!--My Row 1 content starts here--->
             <div class="row mt-2">
-              <div class="col-md-6 text-center float-left">
+              <div class="col-md-6 text-center float-left" id="weatherDashboard">
                 <div class="thumbnail">
                   <div class="img-responsive">
                     <div class="caption">
-                      <p>Word Guess</p>
+                      <p>Weather Dashboard</p>
                     </div>
                   </div>
                 </div>
               </div>
               
               <div class="col-md-6 text-center float-right">
-                <div class="thumbnail">
+                <div class="thumbnail" id="rpg">
                   <div class="img-responsive">
                     <div class="caption">
                       <p>RPG Game</p>
@@ -117,12 +121,12 @@
     </div>
   </main>
   <footer class="footer">
-
-    <!-- Copyright -->
-    © 2020 Copyright:
-
-    </div>
+    <a href="https://github.com/Nivolving"><i class="fab fa-github fa-2x"></i></a>
+    <a href="https://www.linkedin.com/in/nivethap/"><i class="fab fa-linkedin fa-2x"></i></a>
+    <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
   </footer>
-</body>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="script.js"></script>
 
+</body>
 </html>
