Updated the projects with github links

--- a/projects.html
+++ b/projects.html
@@ -48,7 +48,7 @@
 
             <!--My Row 1 content starts here--->
             <div class="row mt-2">
-              <div class="col-md-6 text-center float-left" id="weatherDashboard">
+              <div class="col-md-6 text-center float-left" onclick="window.open('https://nivolving.github.io/WeatherDashboard/')">
                 <div class="thumbnail">
                   <div class="img-responsive">
                     <div class="caption">
@@ -58,11 +58,11 @@
                 </div>
               </div>
               
-              <div class="col-md-6 text-center float-right">
+              <div class="col-md-6 text-center float-right" onclick="window.open('https://haphan64.github.io/CookWhatYouHave/')">
                 <div class="thumbnail" id="rpg">
                   <div class="img-responsive">
                     <div class="caption">
-                      <p>RPG Game</p>
+                      <p>Cook What You Have</p>
                     </div>
                   </div>
                 </div>
@@ -71,21 +71,21 @@
 
             <!--My Row 2 content starts here--->
             <div class="row mt-2">
-              <div class="col-md-6 text-center float-left">
+              <div class="col-md-6 text-center float-left" onclick="window.open('https://nivolving.github.io/Work-Day-Scheduler/Develop/index.html')">
                 <div class="thumbnail">
                   <div class="img-responsive">
                     <div class="caption">
-                      <p>Rock Paper Scissors</p>
+                      <p>Work Day Scheduler</p>
                     </div>
                   </div>
                 </div>
               </div>
               
-              <div class="col-md-6 text-center float-right">
+              <div class="col-md-6 text-center float-right" onclick="window.open('https://nivolving.github.io/RandomPasswordGenerator/Develop/index.html')">
                 <div class="thumbnail">
                   <div class="img-responsive">
                     <div class="caption">
-                      <p>Info Widget</p>
+                      <p>Random Password Generator</p>
                     </div>
                   </div>
                 </div>
@@ -94,11 +94,11 @@
 
             <!--My Row 3 content starts here--->
             <div class="row mt-2">
-              <div class="col-md-6 text-center float-left">
+              <div class="col-md-6 text-center float-left" onclick="window.open('https://nivolving.github.io/Code-Quiz/index.html')">
                 <div class="thumbnail">
                   <div class="img-responsive">
                     <div class="caption">
-                      <p>Trivia Games</p>
+                      <p>Code Quiz</p>
                     </div>
                   </div>
                 </div>
@@ -126,7 +126,5 @@
     <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
   </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="script.js"></script>
-
 </body>
 </html>
