Updated the projet page added images,updated README

--- a/resume.html
+++ b/resume.html
@@ -8,12 +8,13 @@
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/11c3020d0a.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
 </head>
 <body>
         <!-- My Nav bar Code-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-lg">
-                <a class="navbar-brand" href="#">Niv Swamy</a>
+                <a class="navbar-brand" href="index.html">Niv Swamy</a>
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">About Me</a>
@@ -64,7 +65,7 @@
             </main>
             <footer class="footer">
                 <a href="https://github.com/Nivolving"><i class="fab fa-github fa-2x"></i></a>
-                <a href="https://www.linkedin.com/in/nivethap/"><i class="fab fa-linkedin fa-2x"></i></a>
+                <a href="https://www.linkedin.com/in/nivethap/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
                 <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
              </footer>
 </body>
