--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/11c3020d0a.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <!-- My Nav bar Code-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-lg">
-            <a class="navbar-brand" href="#">Niv Swamy</a>
+            <a class="navbar-brand" href="index.html">Niv Swamy</a>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="index.html">About Me</a>
@@ -43,14 +44,27 @@
                         </h3>
                         <hr>
                         <div class="clearfix">
-                            <img src="./images/circle-cropped.png" alt="" class="float-left square">
-                            <p>
-                               Welcome to My Page! <br>
-                               
-                               Nivetha Packiriswamy(Niv) originially from Southern part of, India. Azure Cloud Computing Engineer with Mindtree Bellvue.
-                               Started my bootcamp with UW in the month of in the month of March as full stack web developer. Motto Never Stop Evolving.
-                
-                            </p>
+                            <img src="./images/Nive.jpeg" alt="" class="float-left">
+                            <h4>About.</h4>
+
+                            <p>Born and raised in India, pursued Bachelors in Computer Science and Engineering, Anna University.
+                            Worked in Infosys as Senior systems Engineer for 4 years. I have worked in couple of projects.
+                            First project with Astrazeneca, UK based pharma, worked as Citrix tool Admin. Second project was with Bank of America
+                            as Risk and compliance analyst. 
+                            Moved to the states in 2016 after marriage.</p>
+
+                            <h4>Life in States.</h4>
+
+                           <p> My first city was Atlanta,GA. Definietly a stranger land but started exploring the place i lived in. Adopted a sweet four legged boy and named him Jon.
+                            Made a handful of good friends. Rescused couple of dogs and found them forever home. Passionate about dog sitting. I have worked in Publix and Albertsons as bakery clerk and deli clerk.
+                            From the Deli to the bakery from Cooking chicken to baking cookies i have been everywhere.</p>
+
+                            <h4>Profession & Passion.</h4>
+
+                            <p>At present I am working as a Azure cloud computing engineer with Mindtree LTD, Bellevue. Great team and Engaging job. But my career was Definietly missing the flavor.
+                            I belive strongly that anyone with good resource and great passion can go miles, coming from computer science background never had a chance to work in 
+                            developement side of computers also never had good hands on experience with developement, thats the reason i joined this bootcamp with University of Washington.</p>
+
                         </div>
                     </div>
                  </div>
