--- a/projects.html
+++ b/projects.html
@@ -9,6 +9,7 @@
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="css/portfolio.css">
   <script src="https://kit.fontawesome.com/11c3020d0a.js" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
 </head>
 <!--My Body content starts here-->
 
@@ -16,7 +17,7 @@
   <!--Navbar starts here-->
  <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-lg">
-            <a class="navbar-brand" href="#">Niv Swamy</a>            
+            <a class="navbar-brand" href="index.html">Niv Swamy</a>            
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="index.html">About Me</a>
@@ -48,22 +49,26 @@
 
             <!--My Row 1 content starts here--->
             <div class="row mt-2">
-              <div class="col-md-6 text-center float-left" onclick="window.open('https://nivolving.github.io/WeatherDashboard/')">
+              <div class="col-md-6 text-center float-left">
                 <div class="thumbnail">
-                  <div class="img-responsive">
-                    <div class="caption">
+                  <div class="img-responsive" style="background-image: url('images/WeatherDashboard.png');">
+                    <a href="https://nivolving.github.io/WeatherDashboard/" target="_blank">
+                      <div class="caption">
                       <p>Weather Dashboard</p>
                     </div>
+                  </a>
                   </div>
                 </div>
               </div>
               
-              <div class="col-md-6 text-center float-right" onclick="window.open('https://haphan64.github.io/CookWhatYouHave/')">
-                <div class="thumbnail" id="rpg">
-                  <div class="img-responsive">
-                    <div class="caption">
+              <div class="col-md-6 text-center float-right">
+                <div class="thumbnail">
+                  <div class="img-responsive" style="background-image: url('images/CookWhatYouHave.png');">
+                    <a href="https://haphan64.github.io/CookWhatYouHave/" target="_blank">
+                      <div class="caption">
                       <p>Cook What You Have</p>
                     </div>
+                  </a>
                   </div>
                 </div>
               </div>
@@ -71,22 +76,27 @@
 
             <!--My Row 2 content starts here--->
             <div class="row mt-2">
-              <div class="col-md-6 text-center float-left" onclick="window.open('https://nivolving.github.io/Work-Day-Scheduler/Develop/index.html')">
+              <div class="col-md-6 text-center float-left">
                 <div class="thumbnail">
-                  <div class="img-responsive">
-                    <div class="caption">
-                      <p>Work Day Scheduler</p>
+                  <div class="img-responsive" style="background-image: url('images/WorkDayScheduler.png');">
+                    <img src="" alt="">
+                    <a href="https://nivolving.github.io/Work-Day-Scheduler/Develop/index.html" target="_blank">
+                      <div class="caption">
+                      <p>Work-Day-Scheduler</p>
                     </div>
+                  </a>
                   </div>
                 </div>
               </div>
               
-              <div class="col-md-6 text-center float-right" onclick="window.open('https://nivolving.github.io/RandomPasswordGenerator/Develop/index.html')">
+              <div class="col-md-6 text-center float-right">
                 <div class="thumbnail">
-                  <div class="img-responsive">
-                    <div class="caption">
+                  <div class="img-responsive" style="background-image: url('images/RandomPwdGen.png');">
+                    <a href="https://nivolving.github.io/RandomPasswordGenerator/Develop/index.html" target="_blank">
+                      <div class="caption">
                       <p>Random Password Generator</p>
                     </div>
+                  </a>
                   </div>
                 </div>
               </div>
@@ -94,12 +104,14 @@
 
             <!--My Row 3 content starts here--->
             <div class="row mt-2">
-              <div class="col-md-6 text-center float-left" onclick="window.open('https://nivolving.github.io/Code-Quiz/index.html')">
+              <div class="col-md-6 text-center float-left">
                 <div class="thumbnail">
-                  <div class="img-responsive">
-                    <div class="caption">
+                  <div class="img-responsive" style="background-image: url('images/CodeQuiz.png');">
+                    <a href="https://nivolving.github.io/Code-Quiz/index.html" target="_blank">
+                      <div class="caption">
                       <p>Code Quiz</p>
                     </div>
+                  </a>
                   </div>
                 </div>
               </div>
