--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         </div>
     </nav>
     <!--main content code-->
-    <main>
+    <main> 
         <div class="container py-4">
-            <div class="row">
+            <div class="row" style="background-color: cadetblue;">
                 <div class="col-md-12">
                     <div class="content-box">
                         <h3>
