Added the project2

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             <h4>Profession & Passion.</h4>
 
                             <p>At present I am working as a Azure cloud computing engineer with Mindtree LTD, Bellevue. Great team and Engaging job. But my career was Definietly missing the flavor.
-                            I belive strongly that anyone with good resource and great passion can go miles, coming from computer science background never had a chance to work in 
+                            I strongly believe that anyone with good resource and great passion can go miles, coming from computer science background never had a chance to work in 
                             developement side of computers also never had good hands on experience with developement, thats the reason i joined this bootcamp with University of Washington.</p>
 
                         </div>
