--- a/projects.html
+++ b/projects.html
@@ -118,10 +118,12 @@
               
               <div class="col-md-6 text-center float-right">
                 <div class="thumbnail">
-                  <div class="img-responsive">
+                  <div class="img-responsive" style="background-image: url('images/Medhandoff.png');">
+                    <a href="https://uwproject2bootcamp.herokuapp.com/" target="_blank">
                     <div class="caption">
-                      <p>Info Widget</p>
+                      <p>Med Handoff</p>
                     </div>
+                  </a>
                   </div>
                 </div>
               </div>
